WindGroup Dev/src/objects/Assigned_Shift__c.object
<CustomObject>
    <fields>
        <fullName>Checklist_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Checklist Master</label>
        <referenceTo>Checklist_Master__c</referenceTo>
        <relationshipLabel>Assiged Shifts</relationshipLabel>
        <relationshipName>Assiged_Shifts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>From_Time__c</fullName>
        <label>From Time</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Time_Interval</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mobile_Module__c</fullName>
        <formula>Checklist_Master__r.Mobile_Module__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile Module</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <formula>Checklist_Master__r.Property__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shift__c</fullName>
        <label>Shift</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Daily_Checklist_Session</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>To_Time__c</fullName>
        <label>To Time</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Time_Interval</valueSetName>
        </valueSet>
    </fields>
    <label>Assigned Shift</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Property__c</columns>
        <columns>Shift__c</columns>
        <columns>From_Time__c</columns>
        <columns>To_Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYYMM}-AS-{000000}</displayFormat>
        <label>Shift No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assiged Shifts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>